# scrape-pdf-medic

./: pyproject.toml
scrape_pdf/: __init__.ipynb  output.json
