[tool.poetry]
name = "scrape-pdf"
version = "0.1.0"
description = ""
authors = ["Felipe Gaya Scandiffio <felipegs31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.26.0"
pymupdf = "^1.23.6"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
